k8s-dep-app.yml
# this uses ryanschwartz/concourse-ci, which looks for dashed secrets
# vs underscores, which k8s currently does not support
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata:
    name: concourse-tsa
  spec:
    revisionHistoryLimit: 5
    template:
      metadata:
        labels:
          name: concourse-tsa
      spec:
        containers:
          - name: concourse-tsa
            image: ryanschwartz/concourse-ci
            args:
            - /concourse-web.sh
            ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 2222
              protocol: TCP
            volumeMounts:
            - name: var-lib-concourse-keys
              mountPath: /var/lib/concourse/keys
        volumes:
          - name: var-lib-concourse-keys
            secret:
              secretName: concourse-keys
