k8s-dep-worker.yml
# this uses ryanschwartz/concourse-ci, which looks for dashed secrets
# vs underscores, which k8s currently does not support
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata:
    name: concourse-worker
  spec:
    revisionHistoryLimit: 5
    template:
      metadata:
        labels:
          name: concourse-worker
      spec:
        containers:
          - name: concourse-worker
            image: ryanschwartz/concourse-ci
            securityContext:
              privileged: true
            args:
            -  /concourse-worker.sh
            ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 2222
              protocol: TCP
            volumeMounts:
            - name: var-lib-concourse-keys
              mountPath: /var/lib/concourse/keys
            - name: var-lib-concourse-work
              mountPath: /var/lib/concourse/work
        volumes:
          - name: var-lib-concourse-keys
            secret:
              secretName: concourse-keys
          - name: var-lib-concourse-work
            emptyDir: {}
