k8s-svc-concourse.yml
apiVersion: v1
kind: Service
metadata:
  name: concourse-tsa
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: tsa
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    name: concourse-tsa
  type: NodePort
